# kalvo

./: meson.build
daemon/: Canvas.cpp  Canvas.hpp  MainAdaptor.cpp  MainAdaptor.hpp  kalvod.cpp  meson.build
lib/: libkalvo.cpp  meson.build
